@@ -1,3 +1,8 @@
+2008-06-22  Guillem Jover  <guillem@hadrons.org>
+
+	* 3dfx_driver.c (cleanup_module): Ignore return value from
+	unregister_chrdev as it actually returns void now.
+
 2007-02-06  Guillem Jover  <guillem@hadrons.org>
 
 	* 3dfx_driver.c (MODULE_VERSION): Bump to '2007.02.06'.
